Restructured setup.sh run.sh and stop.sh and moved files around. Reverted an attempt with docker-compose.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-salt/assets/etc/
-salt/assets/var/
-salt/saltminion01/
+app/saltstack/assets/etc/
+app/saltstack/assets/var/
+app/saltstack/saltminion01/
 *-checkpoint.ipynb
+.ipynb_checkpoints
+app/saltstack/assets/srv/salt/win*
